Add slight edits

--- a/app/client/templates/components/explanation/explanation.html
+++ b/app/client/templates/components/explanation/explanation.html
@@ -17,6 +17,6 @@
         <img src="images/img6.png">
         <h2 class="peepcoin_h2">As a first investor, <span style="color: #ffab40; font-weight: 700">PeopleCoin</span> will follow the general Ethereum trend <br />(this is not an independent coin!)</h2>
         <img src="images/img7.png">
-        <h2 class="peepcoin_h2">But as the platform matures, the community will decide the next steps for where the coin goes and potentially organize an ICO.</h2>
+        <h2 class="peepcoin_h2">The platform's community will decide the next steps for where the coin goes and organize an ICO.</h2>
     </div>
 </template>
