--- a/app/client/templates/layout/_footer.html
+++ b/app/client/templates/layout/_footer.html
@@ -24,6 +24,7 @@
                     {{{i18n 'dapp.app.buttons.github'}}}
                 </a>
             </li>
+            <li class="footer-menu-divider">⋅</li>
             <li>
                 <a href="https://discord.gg/NAdh82e">
                     {{{i18n 'dapp.app.buttons.discord'}}}
